--- a/src/GoogleStorageFtp.csproj
+++ b/src/GoogleStorageFtp.csproj
@@ -6,6 +6,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
 		<PackageReference Include="FubarDev.FtpServer" Version="3.0.0-beta.5" />
 		<PackageReference Include="FubarDev.FtpServer.Abstractions" Version="3.0.0-beta.5" />
 		<PackageReference Include="Google.Cloud.Logging.NLog" Version="2.0.0" />
